<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nerdslot</string>

    <!--  Navigation & Menu Strings  -->
    <string name="my_account_string">Account</string>
    <string name="discover_string">Discover</string>
    <string name="menu_string">Menu</string>
    <string name="home_string">Home</string>
    <string name="nav_cart_string">Cart</string>
    <string name="nav_checkout_string">Checkout</string>

    <string name="custom_scrolling_behaviour" tools:ignore="UnusedResources">
        org.nerdslot.Foundation.Helper.BottomNavigationHandler
    </string>

    <!--Auth Activity Strings-->
    <string name="auth_name">\@string/app_name Login</string>
    <string name="sign_in_string">Sign In</string>
    <string name="browse_string">Browse</string>
    <string name="sign_in_cancelled">Login Cancelled</string>
    <string name="no_internet_connection">No connection</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="sign_in_with_email_string">Sign in with email</string>
    <string name="sign_in_with_google_string">Sign in with Google</string>
    <string name="sign_in_with_facebook_string">Sign in with Facebook</string>
    <string name="divider_string">or</string>
    <string name="tos_string">Terms of Use</string>
    <string name="new_account_string">New here? Create an account</string>
    <string name="verification_email_sent">Verification email sent. Check your email to complete sign-in.</string>

    <!--Facebook Activity Strings-->
    <string name="facebook_application_id" translatable="false">400002810648619</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb400002810648619</string>
    <!---->
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">918228727b00702604f27530c143a664</string>
    <string name="ACCOUNT_KIT_APP_SECRET">cea59aee21a5a86c7b8b90f035bfe187</string>

    <!--Recycler Home Content-->
    <string name="product_title">ValourMax Issue #12</string>
    <string name="product_description">Bella Victor, a.k.a The Chief Efulefu Officer is the cover of this month\'s issue. He is The Social Media guru,
        who built Socialander, a top notch digital marketing firm. ValourMax issue #12 is here to teach you a lot about handling challenges, working with your theme
        and so on. All aimed at making you The Better You.
    </string>
    <string name="product_image_description">The Product Image</string>
    <string name="category_magazine">SUBSCRIBE</string>
    <string name="category_read_string">READ</string>
    <string name="get_string">GET</string>
    <string name="category_podcast">LISTEN</string>
    <string name="product_purchase_txt">PURCHASE</string>

    <!--Slider Strings-->
    <string name="slider_image_txt">Slider Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Admin Strings -->
    <string name="create_issue_string">Create Issue</string>
    <string name="update_issue_string">Update Issue</string>
    <string name="create_user_string">Create User Account</string>
    <string name="create_category_string">Add new Category</string>
    <string name="create_admin_string">Make Administrator</string>
    <string name="support_string">Support</string>
    <string name="admin_home_string">Admin Home</string>

    <!--  Create Issue & Category Strings - Admin  -->
    <string name="name_string">Name</string>
    <string name="description_string">Description</string>
    <string name="new_category_string">Create Category</string>
    <string name="description_field_text">No description available</string>
    <string name="title_string">Title</string>
    <string name="select_category_string">Select Category</string>
    <string name="price_string">Price</string>
    <string name="currency_string">NGN</string>
    <string name="is_featured_text">Mark as featured</string>
    <string name="is_free_text">Mark Free</string>
    <string name="upp_free_string">FREE</string>
    <string name="upload_cover_string">Select Issue Images</string>
    <string name="upload_slider_string">Select slider Images</string>
    <string name="select_file_string">Select Epub for Upload</string>

    <!--  Permission Strings  -->
    <string name="default_permission_text">To make video calls, give access to your microphone, camera and contacts. Plus make it easy to verify
    your phone number and keep track of Duo calls by letting Duo manage phone calls.</string>
    <string name="storage_permission_desc">To read/view Issues, give Nerdslot access to read and write. Plus make it easy to view downloaded
    images &amp; files even when offline.</string>
    <string name="default_permission_title_text">Get Started</string>
    <string name="default_permission_btn_text">Give access</string>

    <!--  Account Strings  -->
    <string name="display_name_string">Display Name</string>
    <string name="login_as_admin_string">Sign in as Admin</string>
    <string name="login_as_user_string">Sign in as User</string>
    <string name="switch_accounts_string">Switch Account</string>
    <string name="info_string">User Information</string>
    <string name="na">N/A</string>
    <string name="primary_string">Primary</string>
    <string name="mobile_string">Mobile</string>
    <string name="gender_string">Gender</string>
    <string name="dob_string">Date of Birth</string>
    <string name="reset_password_string">Reset Password</string>
    <string name="sign_out_string">Sign out</string>
    <string name="delete_account_string">Delete Account</string>
    <string name="no_date_string">- / - / -</string>
    <string name="share_string">Share the Nerdslot app</string>
    <string name="view_policy_string">View Privacy Policy</string>
    <string name="view_terms_string">Terms of Use</string>
    <string name="signing_out_string">Signing out&#8230;</string>

    <!--  Menu Strings  -->
    <string name="preference_string">Preference</string>
    <string name="download_options_string">Download Options</string>
    <string name="download_via_wi_fi_string">Download via Wi-Fi only</string>
    <string name="sdcard_download_string">Download to SD card</string>
    <string name="notification_settings_string">Notification settings</string>
    <string name="notify_pref_string">Edit notification preferences</string>

    <!--  Detail Activity Strings  -->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="add_cart_string">Add to Cart</string>
    <string name="category_string">Category</string>
    <string name="magazines_string">Magazines</string>
    <string name="size_string">Size</string>
    <string name="_18mb_size">18mb</string>
    <string name="date_sample_string">15 Dec 2018</string>

    <!--  Magazine Activity Strings  -->
    <string name="title_activity_magazine">Magazine</string>
    <string name="action_settings">Settings</string>
    <string name="init_progress">0/100</string>

    <!--Non-categorized Strings-->
    <string name="permission_rationale">"Permissions are required to proceed. Grant Permissions."</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="required_field">Field is required!</string>
    <string name="loading_string">Loading&#8230;</string>
    <string name="action_help">Help</string>
    <string name="view_feature_images_string">View Feature Images</string>
</resources>
