<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:checked="true"
        android:icon="@drawable/ic_home_selector"
        android:orderInCategory="100"
        android:title="@string/home_string" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_search_selector"
        android:orderInCategory="200"
        android:title="@string/discover_string" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_user_selector"
        android:orderInCategory="300"
        android:title="@string/my_account_string" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu_selector"
        android:orderInCategory="400"
        android:title="@string/menu_string" />
</menu>