<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/admin_navigation_home"
        android:checked="true"
        android:icon="@drawable/ic_home_selector"
        android:orderInCategory="100"
        android:title="@string/home_string" />

    <item
        android:id="@+id/admin_navigation_support"
        android:checked="true"
        android:icon="@drawable/ic_support_selector"
        android:orderInCategory="200"
        android:title="@string/support_string" />

    <item
        android:id="@+id/admin_navigation_account"
        android:checked="true"
        android:icon="@drawable/ic_user_selector"
        android:orderInCategory="300"
        android:title="@string/my_account_string" />

</menu>