<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <RelativeLayout
        android:id="@+id/view_pager_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/detail_viewPager"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:clipToPadding="false"
            android:foregroundGravity="center"
            android:overScrollMode="ifContentScrolls" />
    </RelativeLayout>

    <TextView
        android:id="@+id/created_at_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/date_sample_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_pager_layout" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/issue_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dimen_2"
        app:cardElevation="@dimen/dimen_1"
        app:cardMaxElevation="@dimen/dimen_2"
        app:cardPreventCornerOverlap="true"
        app:contentPadding="@dimen/dimen_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/created_at_txtView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/download_progress_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white_tint_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    android:id="@+id/download_progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/download_progress_textView"
                    android:layout_centerHorizontal="true"
                    android:minWidth="@dimen/dimen_200"
                    android:minHeight="@dimen/dimen_60" />

                <TextView
                    android:id="@+id/download_progress_textView"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/init_progress"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/issue_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dimen_10"
                android:paddingEnd="@dimen/dimen_10"
                android:text="@string/product_title"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/font_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_txtView" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/download_progress_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="download_progress_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/subscribe_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_magazine"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12"
                app:backgroundTint="@color/colorAccentDark"
                app:cornerRadius="@dimen/dimen_2"
                app:layout_constraintEnd_toStartOf="@id/purchase_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/midGrey" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/purchase_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_purchase_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/font_12"
                app:backgroundTint="@color/colorAccentDark"
                app:cornerRadius="@dimen/dimen_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/subscribe_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/midGrey" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_txtView"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:padding="@dimen/dimen_7"
                android:text="@string/title_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_17"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/purchase_btn"
                app:textAllCaps="true" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/category_txtView"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:padding="@dimen/dimen_7"
                android:text="@string/category_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_17"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/issue_title"
                app:textAllCaps="true" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/issue_category"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dimen_10"
                android:paddingEnd="@dimen/dimen_10"
                android:text="@string/magazines_string"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/font_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_txtView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/issue_description_txtView"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:padding="@dimen/dimen_7"
                android:text="@string/description_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_17"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/issue_category"
                app:textAllCaps="true" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/issue_description"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingStart="@dimen/dimen_10"
                android:paddingEnd="@dimen/dimen_10"
                android:text="@string/product_description"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/font_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/issue_description_txtView"
                tools:ignore="UnusedAttribute" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/issue_size_txtView"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:padding="@dimen/dimen_7"
                android:text="@string/size_string"
                android:textColor="@color/black"
                android:textSize="@dimen/font_17"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/issue_description"
                app:textAllCaps="true" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/issue_size"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingStart="@dimen/dimen_10"
                android:paddingEnd="@dimen/dimen_10"
                android:text="@string/_18mb_size"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/font_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/issue_size_txtView"
                tools:ignore="UnusedAttribute" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>