<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/Material.NoActionBar"
    tools:context=".Fragments.Admin.CreateIssue">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/name_n_desc"
                android:layout_width="@dimen/dimen_230"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/issue_title_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/issue_title_text_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_string"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/issue_title_input_layout"
                    android:layout_marginTop="@dimen/dimen_10">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/issue_description_text_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:hint="@string/description_string"
                        android:inputType="textMultiLine|textCapSentences|textAutoCorrect|textAutoComplete"
                        android:lines="4"
                        android:maxLines="25"
                        android:scrollbars="vertical"
                        android:text="@string/description_field_text"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_spinner_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="@dimen/dimen_250"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_n_desc"
                android:layout_marginTop="24dp">

                <AutoCompleteTextView
                    android:id="@+id/categories_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_category_string"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen_230"
                android:layout_below="@id/category_spinner_layout"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:weightSum="2"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/currency_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/currency_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/currency_string"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/issue_price_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/issue_price_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price_string"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>
